fixed placement, alignment

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,8 @@
 .Nav-Button {
   margin-bottom: 0.1cm;
   padding-top: 0.6cm;
-  margin-right: 0.5cm;
+  margin-right: 70px;
+  
 }
 
 .Nav-Button-Text {
@@ -51,7 +52,11 @@
   font-family: 'Oleo Script Swash Caps', cursive;
   color: #30c591;
   font-size: 500%;
-  margin-bottom: -9%;
-  margin-top: -7%;
-  padding-left: 1%;
+  margin-bottom: -12%;
+  margin-top: -10%;
+  padding-left: 15%;
+}
+
+.Search {
+  padding-left: 10%;
 }
